--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,31 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<!--<div class="container">
+  <div class="ui">
+    <div class="ui two item tabs menu">
+      <a routerLink="home" routerLinkActive="active" class="item">Home</a>
+      <a routerLink="vaccinations" routerLinkActive="active" class="item">Impfungen</a>
+    </div>
+    <router-outlet></router-outlet>
+  </div>
+</div>
+-->
+<div class="page-container">
+  <div class="ui grid">
+    <div class="four wide column">
+      <div class="left-column">
+        <p class="style-h2">Coronify.</p>
+        <div class="ui vertical fluid tabular menu">
+          <a routerLink="home" routerLinkActive="active" class="item">Home</a>
+          <a routerLink="vaccinations" routerLinkActive="active" class="item">Impfungen</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="twelve wide stretched column">
+      <div class="middle-column">
+        <div class="segment">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
