6 files modified, 1 added

--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid" *ngIf="vaccination" class="item cfy-vaccination-details">
   <div class="twelve wide column">
-    <h1 class="ui header">{{ vaccination.id }}</h1>
+    <h1 class="ui header">>{{ vaccination?.date }}</h1>
     <h3 class="ui header">{{ vaccination.maxParticipants }}</h3>
     <div class="ui divider"></div>
     <div class="ui grid">
