--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="sixteen wide column">
     <h3 class="ui header">Zeit</h3>
-    {{ vaccination.time }}
+    {{ vaccination.starttime }}
   </div>
 </div>
 
