--- a/src/app/vaccination-list/vaccination-list.component.html
+++ b/src/app/vaccination-list/vaccination-list.component.html
@@ -11,13 +11,9 @@
 
 <h2>Aktuelle Impftermine</h2>
 
-<div class="ui grid">
-  <a
-    *ngFor="let vaccination of vaccinations"
-    class="five wide column item cfy-vaccination-list-item"
-    [vaccination]="vaccination"
-    [routerLink]="['./', vaccination.id]"
-  ></a>
+<div class="ui equal height stretched grid">
+  <a *ngFor="let vaccination of vaccinations" class="five wide column item cfy-vaccination-list-item"
+    [vaccination]="vaccination" [routerLink]="['./', vaccination.id]"></a>
   <div *ngIf="!vaccinations" class="ui active dimmer">
     <div class="ui large text loader">Daten werden geladen...</div>
   </div>
