--- a/src/styles.css
+++ b/src/styles.css
@@ -68,11 +68,49 @@ h3,
 }
 
 .vaccination-item {
-  padding: 15%;
+  padding: 15% 10% 10% 15%;
   width: auto;
   margin-top: 20%;
   -webkit-box-shadow: 0px 4px 40px -30px rgba(188, 188, 188, 0.16);
   box-shadow: 0px 4px 40px -30px rgba(188, 188, 188, 0.16);
   border-radius: 20px;
   background: #fff;
+}
+
+.icon-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.arrow-icon i {
+  margin: 0 !important;
+}
+
+.arrow-icon {
+  background: var(--main);
+  height: 40px;
+  width: 40px;
+  border-radius: 25px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.vaccination-item .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.ui.vertical.tabular.menu .item,
+.ui.vertical.tabular.menu {
+  border: 0 !important;
+}
+
+.ui.vertical.menu .item > i.icon {
+  float: left !important;
+  margin-left: 0 !important;
+  margin-right: 10px !important;
 }
