6 files modified, 8 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
         <div class="ui vertical fluid tabular menu">
           <a routerLink="home" routerLinkActive="active" class="item"><i class="telegram plane icon"></i>Home</a>
           <a routerLink="vaccinations" routerLinkActive="active" class="item"><i class="syringe icon"></i>Impfungen</a>
+          <a routerLink="locations" routerLinkActive="active" class="item"><i class="syringe icon"></i>Impforte</a>
         </div>
       </div>
     </div>
