--- a/src/app/location-list/location-list.component.html
+++ b/src/app/location-list/location-list.component.html
@@ -12,7 +12,7 @@
 <h2>Aktuelle Impftermine</h2>
 
 <div class="ui equal height stretched grid">
-  <a *ngFor="let location of locations" class="five wide column item cfy-location-list-item" [location]="location"
+  <a *ngFor="let location of locations" class="four wide column item cfy-location-list-item" [location]="location"
     [routerLink]="['./', location.id]"></a>
   <div *ngIf="!locations" class="ui active dimmer">
     <div class="ui large text loader">Daten werden geladen...</div>
