--- a/src/app/vaccination-list-item/vaccination-list-item.component.html
+++ b/src/app/vaccination-list-item/vaccination-list-item.component.html
@@ -2,13 +2,14 @@
   <div class="content">
     <div class="content-top">
       <h3 class="header">Impfung am {{ vaccination?.date | date:'dd.MM.yyyy'}}</h3>
-      <div class="description">{{ vaccination.maxParticipants }}</div>
       <div class="description"><i class="clock outline icon"></i> {{ vaccination.starttime }} - {{ vaccination.endtime
         }}</div>
+
+      <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
       <div class="metadata">
         <!--<span *ngFor="let user of vaccination.users; last as l">
-      {{ user.firstname }} {{ user.lastname }}<span *ngIf="!l">, </span>
-      </span>-->
+      {{ user.firstname }} {{ user.lastname}}<span *ngIf="!l">, </span>
+        </span>-->
       </div>
     </div>
     <div class="content-bottom">
