--- a/src/app/location-list-item/location-list-item.component.html
+++ b/src/app/location-list-item/location-list-item.component.html
@@ -1,9 +1,7 @@
-<div class="location-item">
+<div class="vaccination-item">
   <div class="content">
     <div class="content-top">
-
-      <h3>{{ location.vaccinations.date }}</h3>
-      <h3 class="header">Ort: {{ location?.city}}</h3>
+      <h3 class="header">Ort: {{ location?.vaccinations}}</h3>
       <div class="description">{{ location.postalcode }}</div>
       <div class="metadata">
         <span *ngFor="let vaccination of location.vaccinations; last as l">
