--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -1,40 +1,20 @@
 <div class="ui grid" *ngIf="vaccination" class="item cfy-vaccination-details">
   <div class="twelve wide column">
-    <h1 class="ui header">>{{ vaccination?.date }}</h1>
-    <h3 class="ui header">{{ vaccination.maxParticipants }}</h3>
-    <div class="ui divider"></div>
-    <div class="ui grid">
-      <div class="four wide column">
-        <h4 class="ui header">User</h4>
-        <span *ngFor="let user of vaccination.users; last as l">
-          {{ user.firstname }} {{ user.lastname }}<span *ngIf="!l">, </span>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="sixteen wide column">
-    <h3 class="ui header">Zeit</h3>
-    {{ vaccination.starttime }}
+    <h1 class="ui header">Impfung am {{ vaccination?.date | date:'dd.MM.yyyy' }}</h1>
+    <p class="description"><i class="clock outline icon"></i> {{ vaccination.starttime }} - {{ vaccination.endtime
+      }}</p>
+    <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
+
+    <h4 class="ui header">Angemeldete User:</h4>
+    <span *ngFor="let user of vaccination.users; last as l">
+          {{ user.firstname }} {{ user.lastname }} | {{user.birthdate | date:'dd.MM.yyyy'}} | {{user.email}}<span *ngIf="!l">, <div class="ui divider"></div> </span>
+    </span>
   </div>
 </div>
 
-<button [routerLink]="'/vaccinations'" class="ui red button">
+<button [routerLink]="'/vaccinations'" class="ui crayola cfy-button">
   Zurück zur Übersicht
 </button>
-<button routerLink=".." class="ui crayola cfy-button">
+<!--<button routerLink=".." class="ui crayola cfy-button">
   Zurück zur Übersicht
-</button>
-
-<div class="ui container grid">
-  <div class="row">
-    <div class="four wide column">
-      <p><span>Four</span></p>
-    </div>
-    <div class="eight wide column">
-      <p><span>Eight</span></p>
-    </div>
-    <div class="four wide column">
-      <p><span>Four</span></p>
-    </div>
-  </div>
-</div>
+</button>-->
