--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -18,3 +18,7 @@
 <!--<button routerLink=".." class="ui crayola cfy-button">
   Zurück zur Übersicht
 </button>-->
+
+<a class="ui tiny yellow labeled icon button" [routerLink]="['../../admin', vaccination?.id]">
+  <i class="write icon"></i> Impftermin bearbeiten
+</a>
