--- a/src/app/vaccination-list-item/vaccination-list-item.component.html
+++ b/src/app/vaccination-list-item/vaccination-list-item.component.html
@@ -4,6 +4,7 @@
       <h3 class="header">Impfung am {{ vaccination?.date | date:'dd.MM.yyyy'}}</h3>
       <div class="description"><i class="clock outline icon"></i> {{ vaccination.starttime }} - {{ vaccination.endtime
         }}</div>
+      <div> {{vaccination?.location.name}}</div>
 
       <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
       <div class="metadata">
