--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,6 @@
     Impftermine ansehen
   </a>
 </div>
-<!--
-<cfy-vaccination-search (vaccinationSelected)="vaccinationSelected($event)" class="column">
-</cfy-vaccination-search>
--->
+
+<!--<cfy-vaccination-search (vaccinationSelected)="vaccinationSelected($event)" class="column">
+</cfy-vaccination-search>-->
