--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -1,4 +1,4 @@
-<h1>Buchformular</h1>
+<h1>Impftermin hinzufügen</h1>
 <form class="ui large form" [formGroup]="vaccinationForm" (ngSubmit)="submitForm()">
   <input type="hidden" name="id">
   <div class="field">
