--- a/src/app/vaccination-list-item/vaccination-list-item.component.html
+++ b/src/app/vaccination-list-item/vaccination-list-item.component.html
@@ -4,9 +4,9 @@
       <h3 class="header">Impfung am {{ vaccination?.date | date:'dd.MM.yyyy'}}</h3>
       <div class="description"><i class="clock outline icon"></i> {{ vaccination.starttime }} - {{ vaccination.endtime
         }}</div>
-      <div> {{vaccination?.location.name}}</div>
 
       <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
+      <div><i class="map marker alternate icon"></i> {{vaccination?.location.city}}</div>
       <div class="metadata">
         <!--<span *ngFor="let user of vaccination.users; last as l">
       {{ user.firstname }} {{ user.lastname}}<span *ngIf="!l">, </span>
