--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,13 @@
 /* general */
 
 body {
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   color: #333;
 }
 
 a,
 button {
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 a {
@@ -26,7 +26,7 @@ a {
 h1,
 .style-h1 {
   color: var(--main);
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   font-weight: 700 !important;
   font-size: 35px !important;
 }
@@ -34,14 +34,14 @@ h1,
 h2,
 .style-h2 {
   color: var(--main);
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   font-weight: 700 !important;
   font-size: 25px;
 }
 
 h3,
 .style-h3 {
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   font-weight: 700 !important;
   font-size: 25px;
 }
@@ -75,6 +75,16 @@ h3,
   box-shadow: 0px 4px 40px -30px rgba(188, 188, 188, 0.16);
   border-radius: 20px;
   background: #fff;
+  transition: 300ms ease-in-out;
+}
+
+.vaccination-item:hover {
+  transform: translateX(2%) translateY(-2%);
+}
+
+.vaccination-item:hover .arrow-icon {
+  background: blue;
+  transform: scale(1.2);
 }
 
 .icon-wrapper {
@@ -95,6 +105,7 @@ h3,
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 300ms ease-in-out;
 }
 
 .vaccination-item .content {
