--- a/src/app/vaccination-form/vaccination-form.component.html
+++ b/src/app/vaccination-form/vaccination-form.component.html
@@ -1,31 +1,38 @@
 <h1>Impftermin hinzufügen</h1>
 <form class="ui large form" [formGroup]="vaccinationForm" (ngSubmit)="submitForm()">
+
   <input type="hidden" name="id">
+
+  <div class="field">
+    <label>Maximale Teilnehmeranzahl</label>
+    <input type="number" formControlName="maxParticipants">
+    <div *ngIf="errors.maxParticipants" class="ui negative message">{{
+      errors.maxParticipants }}</div>
+  </div>
+
   <div class="field">
     <label>Datum</label>
     <input type="date" formControlName="date">
     <div *ngIf="errors.date" class="ui negative message">{{
       errors.date }}</div>
   </div>
+
   <div class="field">
     <label>Startzeit</label>
     <input type="time" formControlName="starttime">
     <div *ngIf="errors.starttime" class="ui negative message">{{
       errors.starttime }}</div>
   </div>
+
   <div class="field">
     <label>Endzeit</label>
     <input type="time" formControlName="endtime">
     <div *ngIf="errors.endtime" class="ui negative message">{{
       errors.endtime }}</div>
   </div>
-  <div class="field">
-    <label>Maximale Teilnehmeranzahl</label>
-    <input type="number" formControlName="maxParticipants">
-    <div *ngIf="errors.maxParticipants" class="ui negative message">{{ errors.maxParticipants
-      }}</div>
-  </div>
 
+
+  <!--(change)="selectChangeHandler($event)"-->
   <div class="field">
     <label>Ort</label>
     <select class="ui dropdown">
@@ -33,7 +40,9 @@
       {{location.city}}</option>
     </select>
   </div>
+  <br>
 
-  <button type="submit" class="ui button"
+  <button type="submit" class="ui green button"
 [disabled]="vaccinationForm.invalid">Speichern</button>
+
 </form>
