--- a/src/app/vaccination-list-item/vaccination-list-item.component.html
+++ b/src/app/vaccination-list-item/vaccination-list-item.component.html
@@ -6,7 +6,7 @@
         }}</div>
 
       <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
-      <div><i class="map marker alternate icon"></i> {{vaccination?.location.city}}</div>
+      <div><i class="map marker alternate icon"></i> {{vaccination.location_id}}</div>
       <div class="metadata">
         <!--<span *ngFor="let user of vaccination.users; last as l">
       {{ user.firstname }} {{ user.lastname}}<span *ngIf="!l">, </span>
