--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="ui grid" *ngIf="vaccination" class="item cfy-vaccination-details">
     <div class="twelve wide column">
-      <h1 class="ui header">Impfung am {{ vaccination?.date | date:'dd.MM.yyyy' }}</h1>
+      <h1 class="ui header">Impfung am {{ vaccination.date | date:'dd.MM.yyyy' }}</h1>
       <p class="description"><i class="clock outline icon"></i> {{ vaccination.starttime }} - {{ vaccination.endtime
         }}</p>
       <p> <i class="user outline icon"></i> {{vaccination.users.length}} / {{vaccination.maxParticipants}}</p>
