--- a/src/app/vaccination-details/vaccination-details.component.html
+++ b/src/app/vaccination-details/vaccination-details.component.html
@@ -49,10 +49,11 @@
   Zurück zur Übersicht
 </button>-->
 
-  <a class="ui tiny yellow labeled icon button" [routerLink]="['../../admin', vaccination?.id]">
+
+  <a *ngIf="authService.isLoggedIn()" class="ui tiny yellow labeled icon button" [routerLink]="['../../admin', vaccination?.id]">
     <i class="write icon"></i> Impftermin bearbeiten
   </a>
-  <a class="ui tiny red labeled icon button" (click)="removeVaccination()">
+  <a *ngIf="authService.isLoggedIn()" class="ui tiny red labeled icon button" (click)="removeVaccination()">
     <i class="remove icon"></i>
     Löschen
   </a>
