--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,8 @@
           <a routerLink="vaccinations" routerLinkActive="active" class="item"><i class="syringe icon"></i>Impfungen</a>
           <a routerLink="locations" routerLinkActive="active"
             class="item"><i class="map marker alternate icon"></i>Impforte</a>
-          <a routerLink="admin" routerLinkActive="active" class="item"><i class="lock icon"></i>Administration</a>
-          <a *ngIf="isLoggedIn()" routerLink="admin" routerLinkActive="active" class="item">Administration</a>
+          <a *ngIf="isLoggedIn()" routerLink="admin" routerLinkActive="active"
+            class="item"><i class="lock icon"></i>Administration</a>
           <a routerLink="login" routerLinkActive="active" class="item">{{getLoginLabel()}}</a>
         </div>
       </div>
