--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
         <div *ngIf="isLoggedIn()" class="username">
 
-          <span class="username-firstletter">{{this.user?.firstname.charAt(0)}}</span>
+          <span class="username-firstletter">{{user?.firstname.charAt(0)}}</span>
           <span>Hallo, {{user?.firstname}}! </span>
 
         </div>
